# game_engine_rs_2

./: Cargo.toml  NOTES.txt  scratch  todo.txt
shaders/: model.frag  model.vert  renderer.comp  transform.comp  transformation.glsl
shaders/occlusion/: depth_copy.comp  hiz_generate.comp
src/: asset_manager.rs  camera.rs  gltf_loader.rs  gpu_manager.rs  input.rs  main.rs  obj_loader.rs  render_context.rs  texture.rs
src/component/: mod.rs
src/engine/: mod.rs
src/gpu_manager/: gpu_vec.rs  gpu_vector.rs
src/render_thread/: mod.rs
src/renderer/: mod.rs  occlusion_culling.rs
src/transform/: compute.rs  mod.rs
src/ui/: font.rs  mod.rs  ui.rs
src/util/: container.rs  mod.rs  seg_storage.rs
