[package]
name = "game_engine_rs_2"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.31.1", features = ["rayon", "persistence"] }
egui_winit_vulkano = "0.28.0"
glam = { version = "0.30.8", features = ["serde", "speedy", "fast-math"] }
image = "0.25.8"
rand = "0.9.2"
rayon = "1.11.0"
tobj = "4.0.3"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.12"
