[package]
name = "game_engine_rs_2"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
# lto = "fat"
# panic = "abort"
# codegen-units = 1
# debug = true

[profile.dev]
# opt-level = 2
debug = true

[dependencies]
core_affinity = "0.8.3"
dary_heap = "0.3.8"
downcast-rs = "2.0.2"
egui = { version = "0.31.1", features = ["rayon", "persistence"] }
egui_winit_vulkano = "0.28.0"
force-send-sync = "2.0.0"
glam = { version = "0.30.8", features = ["serde", "speedy", "fast-math"] }
gltf = { version = "1.4.1", features = ["extras", "names"] }
image = "0.25.8"
libc = "0.2.177"
num_cpus = "1.17.0"
parking_lot = { version = "0.12.4", features = ["hardware-lock-elision"] }
rand = "0.9.2"
rayon = "1.11.0"
segvec = "0.2.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
thread-priority = "3.0.0"
tobj = "4.0.3"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.12"
